# corsocpp_pap_2024

./: CMakeLists.txt  README.md
S1/: CMakeLists.txt  libreria.cpp  libreria.h  main.cpp
S2/: CMakeLists.txt  main.cpp
S3/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
S4/: CMakeLists.txt  main.cpp  orange.cpp  orange.h
S5/: CMakeLists.txt  containers.cpp  exceptions.cpp  smartptrs.cpp
S6/: CMakeLists.txt  derivationtypes.cpp  employee.cpp  employee.h  lecturer.cpp  lecturer.h  main.cpp  researcher.cpp  researcher.h
S7/: CMakeLists.txt  default.cpp  delete.cpp  final.cpp  hiding.cpp  overloading  overloading.cpp  overriding.cpp  s7ex.cpp  virtualdestructor.cpp
S8/: CMakeLists.txt  constcast.cpp  dynamiccast.cpp  lecturer.h  lecturerresearcher.cpp  lecturerresearcher.h  main.cpp  researcher.cpp  researcher.h  staticcast.cpp
S9/: CMakeLists.txt  friend.cpp  lambda.cpp  mylist.h  template.cpp
qt/Esempio1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/Santuzzo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/Santuzzo (in classe)/: mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/Santuzzo_in_classe/: CMakeLists.txt  dialogconfigurazione.cpp  dialogconfigurazione.h  dialogconfigurazione.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  risorse.qrc
qt/Santuzzo_in_classe_v2/: CMakeLists.txt  gamepreferences.cpp  gamepreferences.h  gamepreferences.ui  mainwindow.h  mainwindow.ui
